test_regress/t/t_class_member_bad3.out
%Error: t/t_class_member_bad3.v:16:12: Static access to non-static member variable 'member'
   16 |       Foo::member = 1;
      |            ^~~~~~
%Error: Exiting due to
